Release-life-cycle/host-ip-app/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hostip
spec:
  selector:
    matchLabels:
      app: hostip # has to match .spec.template.metadata.labels
  serviceName: "hostip-service"
  replicas: 2 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: hostip # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: hostip
        image: 409782255447.dkr.ecr.us-east-1.amazonaws.com/host-ip:1
        ports:
        - containerPort: 5000
          name: web
        volumeMounts:
        - name: hosts-data
          mountPath: /var/hosts/data
      volumes:
      - name: hosts-data
        persistentVolumeClaim:
          claimName: hostip-claim
